--- a/api/templates/index.html
+++ b/api/templates/index.html
@@ -12,10 +12,7 @@
         <a class="nav-link" href="/">Home </a>
         </div>
         <div class="nav-item">
-        <a class="nav-link" href="/updates">Dashboard <span class="sr-only">(current)</span></a>
-        </div>
-        <div class="nav-item">
-        <a class="nav-link" href="/search">Followers</a>
+        <a class="nav-link" target="_blank" href="https://github.com/MohitKumar1991/twitter-export">Github</a>
         </div>
         <span class="navbar-text">
             A tool to DM your twitter followers
@@ -23,45 +20,57 @@
     </nav>
     <div class="container">
         <h2 style="margin:20px;"></h2>
-        <div class="row alert alert-success" role="alert">
-            <h4 class="col alert-heading col" id="indexstatus">Local Followers with {{fcount}} followers is {{index_status}}</h4>
-            <h4 class="col">Campaign status :: <span id="campaignsstatus"> </span></h4>
-            <a class="col" href="/search" target="_blank"> <button class="btn btn-info">SEE FOLLOWERS</button></a>
+        <div id="submitemail-group">
+            <h3 for="submitemail-msg">Create a link for yourself!</h3>
+            <form id="submitemail" style="width:300px;margin-top:30px;">
+                <div>
+                    <div class="form-group">
+                        <input type="text" class="form-control" id="created_by" placeholder="Who are you?" value="">
+                    </div>
+                    <div class="form-group">
+                        <input type="text" class="form-control" id="link_id" placeholder="From Link" value="">
+                    </div>
+                    <div class="form-group">
+                        <button type="submit" class="btn btn-info">Generate Link</button>
+                    </div>
+                </div>
+            </form>
         </div>
-        <div class="row">
-            <div class="card col-8" id="cdetails" style="width: 18rem;display:none">
-                <form>
-                    <div class="form-group row">
-                      <label for="email" class="col-sm-4 col-form-label bold">Campaign Name</label>
-                      <div class="col-sm-8">
-                        <input type="text" readonly class="form-control-plaintext" id="cname" value="">
-                      </div>
-                    </div>
-                    <div class="form-group row">
-                        <label for="message" class="col-sm-4 col-form-label">Campaign Message</label>
-                        <div class="col-sm-8">
-                          <input type="text" readonly class="form-control-plaintext" id="cmesg" value="">
-                        </div>
-                    </div>
-                    <div class="form-group row">
-                        <label for="message" class="col-sm-4 col-form-label">Campaign Message</label>
-                        <div class="col-sm-8">
-                          <input type="text" readonly class="form-control-plaintext" id="cstatus" value="">
-                        </div>
-                    </div>
-                    <div class="form-group row">
-                        <label for="message" class="col-sm-4 col-form-label">Total Messages Sent</label>
-                        <div class="col-sm-8">
-                          <input type="text" readonly class="form-control-plaintext" id="cstats" value="">
-                        </div>
-                    </div>
-                </form>
-            </div>
+        <div id="successmsg" style="display:none">
+            <h2> Thank you for your subsciption!!</h2>
+            <p> You can use this affiliate link to get more subscribers on board. </p>
+            <p id="aflink"></p>
         </div>
     </div>
     
     <script>
-        window.onload = function() {}
+        window.onload = function() {
+
+            $('#submitemail').submit(function formsubmit(e) {
+                e.preventDefault();
+                $.ajax({
+                        type: "POST",
+                        url: '/link',
+                        contentType: 'application/json',
+                        dataType: "json",
+                        data: JSON.stringify({ 
+                                'created_by': $('#created_by').val(),
+                                'link_id': $('#link_id').val()
+                            }),
+                        success:function(data){
+                            console.log(data);
+                            $('#aflink').text(data.url);
+                            $('#successmsg').show();
+                            $("#submitemail-group").hide();
+                        },
+                        error:function(err) {
+                            console.log(err);
+                            alert(`There was an error in submitting ${err}`);
+                        }
+                    });
+                
+            });
+        }
      </script>
 </body>
 </html>
