--- a/api/templates/submit.html
+++ b/api/templates/submit.html
@@ -23,7 +23,7 @@
         <div id="submitemail-group">
             <h3 for="submitemail-msg">Subscribe to {{orig_created_by}} here!</h3>
             <form id="submitemail" style="width:300px;margin-top:30px;">
-                <div>
+                    <input type="hidden" class="form-control" id="link_id" placeholder="LinkId" value="{{link_id}}">
                     <div class="form-group">
                         <input type="email" class="form-control" id="email" placeholder="Email" value="">
                     </div>
@@ -36,7 +36,6 @@
                     <div class="form-group">
                         <button type="submit" class="btn btn-info">Submit</button>
                     </div>
-                </div>
             </form>
         </div>
         <div id="successmsg" style="display:none">
@@ -51,10 +50,29 @@
 
             $('#submitemail').submit(function formsubmit(e) {
                 e.preventDefault();
-                $('#successmsg').show();
-                $("#submitemail-group").hide();
+                $.ajax({
+                        type: "POST",
+                        url: '/email',
+                        contentType: 'application/json',
+                        dataType: "json",
+                        data: JSON.stringify({ 
+                                'email': $('#email').val(), 
+                                'name': $('#name').val(), 
+                                'username': $('#username').val(),
+                                'link_id': $('#link_id').val()
+                            }),
+                        success:function(data){
+                            $('#successmsg').show();
+                            $("#submitemail-group").hide();
+                            var url = window.location.protocol + '//' + window.location.host + '/l/'+data.aflink.url;
+                            $('#aflink').text(url);
+                        },
+                        error:function(err) {
+                            alert(`There was an error in submitting ${err}`);
+                        }
+                    });
+                
             });
-
         }
      </script>
 </body>
