--- a/api/templates/submit.html
+++ b/api/templates/submit.html
@@ -31,7 +31,7 @@
                         <input type="text" class="form-control" id="name" placeholder="Name" value="">
                     </div>
                     <div class="form-group">
-                        <input type="text" class="form-control" id="username" placeholder="twitter username" value="">
+                        <input type="text" class="form-control" id="username" placeholder="twitter username" value="{{username}}">
                     </div>
                     <div class="form-group">
                         <button type="submit" class="btn btn-info">Submit</button>
